--- a/src/blocks/card-footer/card-footer.pug
+++ b/src/blocks/card-footer/card-footer.pug
@@ -2,4 +2,4 @@ mixin card-footer(text, buttonText)
   .card-footer
     .card-footer__left= text
     .card-footer__right
-    .rounded-button= buttonText
+    button.rounded-button= buttonText
