--- a/src/blocks/enter-card/enter-card.pug
+++ b/src/blocks/enter-card/enter-card.pug
@@ -2,10 +2,12 @@ mixin enter-card()
   .enter-card
     .card-canvas
       h1.enter-card__title Войти
-      input.text-field.enter-card__field(type="text" placeholder="Email")
-      input.text-field(type="password" placeholder="Пароль")
-      .long-button.enter-card__enter-button Войти
-        i.long-button__icon arrow_forward
+      form(action="index.html", method="post")
+        input.text-field.enter-card__field(type="text" placeholder="Email")
+        input.text-field(type="password" placeholder="Пароль")
+        .enter-card__enter-button
+          include ../long-button/long-button
+          +long-button('Войти')
       
       .enter-card__footer
         include ../card-footer/card-footer.pug 
