--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -181,8 +181,8 @@ html
           .form-elements__buttons
             .button.form-elements__btn Click me 
             .button.button--disabled.form-elements__btn Click me 
-            .rounded-button.form-elements__btn--big.form-elements__btn Click me
-            .rounded-button.rounded-button--disabled.form-elements__btn--big.form-elements__btn Click me
+            button.rounded-button.form-elements__btn--big.form-elements__btn Click me
+            button.rounded-button.rounded-button--disabled.form-elements__btn--big.form-elements__btn Click me
             .simple-button.form-elements__btn Click me
             .simple-button.simple-button--disabled.form-elements__btn Click me
             include ../../blocks/long-button/long-button 
