--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -10,7 +10,7 @@ mixin header(obj)
       else
         .header__enter-panel
           .header__enter-button
-            .rounded-button= obj.buttons.enter
+            button.rounded-button= obj.buttons.enter
           .button= obj.buttons.register
       .header__toggle
         button.menu-toggle#menu_toggle
