--- a/src/blocks/long-button/long-button.scss
+++ b/src/blocks/long-button/long-button.scss
@@ -5,8 +5,9 @@
     display: inline-block;
     color: $white;
     background-image: $gradient;
+    border: none;
     border-radius: 22px;
-    padding: 12px 18px;
+    padding: 16px 18px;
     text-transform: uppercase;
     font-size: .75rem;
     font-weight: bold;
