--- a/src/blocks/rounded-button/rounded-button.scss
+++ b/src/blocks/rounded-button/rounded-button.scss
@@ -5,6 +5,7 @@
     position: relative;
     color: $purple;
     border-radius: 22px;
+    border: none;
     padding: 8px 18px;
     text-transform: uppercase;
     font-size: .75rem;
@@ -13,7 +14,6 @@
     cursor: pointer;
     user-select: none;
     background-color: $white;
-    //margin: 2px;
 
     &::after {
         display: inherit;
