--- a/src/blocks/text-field/text-field.scss
+++ b/src/blocks/text-field/text-field.scss
@@ -6,9 +6,7 @@
     border-radius: 4px;
     font-size: .875rem;
     line-height: 18px;
-    padding-left: 15px;
-    padding-top: 13px;
-    padding-bottom: 13px;
+    padding: 13px 15px 13px 15px;
     width: 100%;
 
     &::placeholder {
