change font on rounded-button

--- a/src/blocks/rounded-button/rounded-button.scss
+++ b/src/blocks/rounded-button/rounded-button.scss
@@ -3,6 +3,7 @@
 .rounded-button {
     display: inline-block;
     position: relative;
+    font-family: Montserrat;
     color: $purple;
     border-radius: 22px;
     border: none;
